# vgm-assets

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.object_semantics_explorer_v0.config.mjs
assemblies/kenney/: opening_bundle_layout_v0.json
assets/ai2thor/: support_clutter_bundle_layout_v0.json
catalogs/ceiling_light_fixtures_v0/: fixture_catalog_manifest.json  fixture_index.json  fixtures.json
catalogs/living_room_kenney_v0/: asset_catalog_manifest.json  assets.json  category_index.json  measurements.json  size_normalization_v1.json  support_surface_annotations_v1.json
catalogs/living_room_objaverse_v0/: asset_catalog_manifest.json  assets.json  category_index.json
catalogs/living_room_toy_v0/: asset_catalog_manifest.json  assets.json
catalogs/object_semantics_v0/: ai2thor_candidate_annotations_v0.json  ai2thor_review_queue_v0.json  child_object_annotations_v0.json  parent_object_annotations_v0.json
docs/: README.md  asset_workflow_v0.md  category_sampling_v0.md  export_snapshots_v0.md  living_room_kenney_v0.md  scene_engine_consumer_v0.md  storage_layout_v0.md
env/: environment.yml
tests/: test_ai2thor_object_semantics.py  test_ai2thor_object_semantics_staging.py  test_ai2thor_review_workspace.py  test_artifact_paths.py  test_exports.py  test_maintained_anchor.py  test_manual_wall_fixture_source.py  test_object_semantics.py  test_object_semantics_explorer.py  test_object_semantics_promotion.py  test_object_semantics_review_queue.py  test_protocol.py  test_wall_fixtures.py
tools/: validate_asset_catalog.py
(+243 files in other folders)
